--- a/app/public/profiles.html
+++ b/app/public/profiles.html
@@ -113,7 +113,15 @@
 
     <!-- Nav Bar -->
     <nav class="navbar fixed-top navbar-dark pink accent-2">
-      <a class="navbar-brand" href="#"> <i class="fas fa-bug"></i> LoveBug</a>
+      <a class="navbar-brand" href="#">
+        <img
+          style="height: 2rem; width: auto;"
+          class="img-fluid"
+          src="../../assets/images/ladybug.png"
+          alt=""
+        />
+        LoveBug</a
+      >
       <button
         class="navbar-toggler"
         type="button"
