--- a/app/public/profiles.html
+++ b/app/public/profiles.html
@@ -117,7 +117,7 @@
         <img
           style="height: 2rem; width: auto;"
           class="img-fluid"
-          src="../../assets/images/ladybug.png"
+          src="https://image.flaticon.com/icons/svg/2021/2021729.svg"
           alt=""
         />
         LoveBug</a
@@ -176,18 +176,41 @@
 
     <!-- Full Page Intro -->
     <div class="container view mw-100 mh-100 p-0 m-0">
-      <div class="row m-0 p-0 no-gutters h-100">
+      <div class="row row-cols-1 pink lighten-5 m-0 p-0 h-100">
         <!-- User Profile -->
-        <div class="col-4 view pink lighten-5 border-right border-light">
-          <!-- profile pic insterted here -->
-          <img
-            class="h-100"
-            src="https://images.pexels.com/photos/1845534/pexels-photo-1845534.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"
-            alt=""
-          />
+        <div class="col-md-4 col-12 border-right border-light my-4 py-5">
+          <div class="container bg-white border-dark my-3 py-3">
+            <div class="row">
+              <div class="col">
+                <!-- Profile Pic -->
+                <img
+                  src="https://images.pexels.com/photos/1845534/pexels-photo-1845534.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"
+                  class="img-fluid img-thumbnail z-depth-1 rounded-lg"
+                  alt="Avatar"
+                />
+              </div>
+              <div class="col bg-success my-1 mr-3">
+                <!-- User Name and qoutes -->
+                <h3 class="pt-2 text-center">
+                  User Name
+                </h3>
+                <p class="text-center">
+                  "Some kind of qoute from user"
+                </p>
+
+                <!-- Stats -->
+                <h3 class="bg-white rounded-pill text-center mx-5">25</h3>
+                <p class="mt-0 text-center">Matches</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="container bg-white border-dark my-3 py-3">
+            <div class="row"></div>
+          </div>
         </div>
         <!-- Profile Card Gallery form -->
-        <div class="col p-4 mt-5 anyClass">
+        <div class="col-md-8 col-12 p-4 mt-5 white">
           <div class="row my-2">
             <!-- Header -->
             <div class="col text-center">
