added query functions to get values to update profile and show match

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -150,7 +150,9 @@
               class="dropdown-menu dropdown-info"
               aria-labelledby="navbarDropdownMenuLink"
             >
-              <a class="dropdown-item waves-effect waves-light" href="#"
+              <a
+                class="dropdown-item waves-effect waves-light"
+                href="/api/profiles"
                 >All Users</a
               >
               <a class="dropdown-item waves-effect waves-light" href="#"
