--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -159,7 +159,9 @@
               class="dropdown-menu dropdown-info"
               aria-labelledby="navbarDropdownMenuLink"
             >
-              <a class="dropdown-item waves-effect waves-light" href="#"
+              <a
+                class="dropdown-item waves-effect waves-light"
+                href="/api/profiles"
                 >All Users</a
               >
               <a class="dropdown-item waves-effect waves-light" href="#"
@@ -182,6 +184,7 @@
           class="col-12 col-md-4 view pink lighten-5 border-right border-light"
         >
           <img
+            id="userPic"
             class="h-100"
             src="https://images.pexels.com/photos/1757281/pexels-photo-1757281.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"
             alt=""
@@ -204,12 +207,12 @@
                 <!-- Material input -->
                 <div class="md-form form-group">
                   <input
-                    type="email"
+                    type="text"
                     class="form-control"
-                    id="inputEmail4MD"
+                    id="firstName"
                     placeholder="First Name"
                   />
-                  <label for="inputEmail4MD">Jane</label>
+                  <label for="firstName">Jane</label>
                 </div>
               </div>
               <!-- Grid column -->
@@ -219,12 +222,12 @@
                 <!-- Material input -->
                 <div class="md-form form-group">
                   <input
-                    type="password"
+                    type="text"
                     class="form-control"
-                    id="inputPassword4MD"
+                    id="lastName"
                     placeholder="Last Name"
                   />
-                  <label for="inputPassword4MD">Doe</label>
+                  <label for="lastName">Doe</label>
                 </div>
               </div>
               <!-- Grid column -->
@@ -240,7 +243,7 @@
                   <input
                     type="email"
                     class="form-control"
-                    id="inputEmail4MD"
+                    id="userEmail"
                     placeholder="Email"
                   />
                   <label for="inputEmail4MD">Email</label>
@@ -255,10 +258,10 @@
                   <input
                     type="password"
                     class="form-control"
-                    id="inputPassword4MD"
+                    id="userPassword"
                     placeholder="Password"
                   />
-                  <label for="inputPassword4MD">Password</label>
+                  <label for="inputPassword">Password</label>
                 </div>
               </div>
               <!-- Grid column -->
@@ -291,7 +294,7 @@
               <label for="select">What would you do if you could be you?</label>
               <select
                 class="browser-default custom-select mb-4"
-                id="question-0"
+                id="question-1"
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
@@ -310,7 +313,7 @@
               <label for="select">What would you do if you could be you?</label>
               <select
                 class="browser-default custom-select mb-4"
-                id="question-0"
+                id="question-2"
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
@@ -329,7 +332,7 @@
               <label for="select">What would you do if you could be you?</label>
               <select
                 class="browser-default custom-select mb-4"
-                id="question-0"
+                id="question-3"
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
@@ -348,7 +351,7 @@
               <label for="select">What would you do if you could be you?</label>
               <select
                 class="browser-default custom-select mb-4"
-                id="question-0"
+                id="question-4"
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
@@ -367,7 +370,7 @@
               <label for="select">What would you do if you could be you?</label>
               <select
                 class="browser-default custom-select mb-4"
-                id="question-0"
+                id="question-5"
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
@@ -386,7 +389,7 @@
               <label for="select">What would you do if you could be you?</label>
               <select
                 class="browser-default custom-select mb-4"
-                id="question-0"
+                id="question-6"
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
@@ -405,7 +408,7 @@
               <label for="select">What would you do if you could be you?</label>
               <select
                 class="browser-default custom-select mb-4"
-                id="question-0"
+                id="question-7"
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
@@ -424,7 +427,7 @@
               <label for="select">What would you do if you could be you?</label>
               <select
                 class="browser-default custom-select mb-4"
-                id="question-0"
+                id="question-8"
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
@@ -443,7 +446,7 @@
               <label for="select">What would you do if you could be you?</label>
               <select
                 class="browser-default custom-select mb-4"
-                id="question-0"
+                id="question-9"
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
@@ -459,13 +462,10 @@
             <div class="row mb-4">
               <div class="col-2">
                 <label for="select">Gender</label>
-                <select
-                  class="browser-default custom-select"
-                  id="desiredGender"
-                >
+                <select class="browser-default custom-select" id="userGender">
                   <option value="" disabled="" selected="">Your Gender</option>
-                  <option value="1">Female</option>
-                  <option value="2">Male</option>
+                  <option value="female">Female</option>
+                  <option value="male">Male</option>
                 </select>
               </div>
               <div class="col-4">
@@ -477,9 +477,9 @@
                   <option value="" disabled="" selected=""
                     >Desired Gender</option
                   >
-                  <option value="1">Female</option>
-                  <option value="2">Male</option>
-                  <option value="3">Doesnt Matter</option>
+                  <option value="female">Female</option>
+                  <option value="male">Male</option>
+                  <option value="">Doesnt Matter</option>
                 </select>
               </div>
               <div class="col"></div>
@@ -583,23 +583,54 @@
 
     <!-- ALL SCRIPTS HERE -->
     <script>
+      //Function
+      function getScores() {
+        var _scores = [];
+        for (var i = 0; i < 10; i++) {
+          var inputQuest = "#question-" + i;
+          var value = $(inputQuest).val();
+          _scores.push(value);
+        }
+
+        return _scores;
+        console.log(scores);
+      }
+
       $(document).ready(function () {
         //Get user name from storage
         var userID = sessionStorage.getItem("userID").toLowerCase();
 
-        //Get Values
+        //Get userprofile
+        $.get("/api/profile/" + userID, function (data, status) {
+          $("#userPic").attr("src", data.profilePic);
+        });
 
         //When surver is submitted post all info to database then load info to modal,
         //then show modal
         $("#submitSurvey").click(function () {
           event.preventDefault();
 
+          var _scores = getScores();
+          var _firstName = $("#firstName").val();
+          var _lastName = $("#lastName").val();
+          var _gender = $("#userGender").val();
+          var _desiredGender = $("#desiredGender").val();
+
+          // //debug
+          // var temp = {
+          //   firstName: "Adam 8",
+          //   lastName: "Doe",
+          //   scores: ["5", "2", "3", "5", "2", "2", "2", "2", "1", "5"],
+          //   gender: "male",
+          //   desiredGender: "female",
+          // };
+
           var temp = {
-            firstName: "Adam 8",
-            lastName: "Doe",
-            scores: ["5", "2", "3", "5", "2", "2", "2", "2", "1", "5"],
-            gender: "male",
-            desiredGender: "female",
+            firstName: _firstName,
+            lastName: _lastName,
+            scores: _scores,
+            gender: _gender,
+            desiredGender: _desiredGender,
           };
 
           //Update Profile on database
@@ -609,7 +640,6 @@
             $("#matchName").html(data.uniqueID);
             $("#matchAmt").text(data.amtMatched);
 
-            //alert("match: " + data + "\nStatus: " + status);
             //Clear user name from storage
             sessionStorage.clear();
           });
